# 2024-Big-Data-Bowl

./: Big Data Bowl Ideas.ipynb  Big Data Bowl Steps.ipynb  README.md  pyproject.toml  tasks.py
Code/: Data Prep.ipynb  Modeling.ipynb  TesterFile.py  Viz R.R  Viz.ipynb
Documents/: Big Data Bowl Steps.ipynb
bdb24/: Big Data Bowl Winner Analysis.ipynb  README Start file.py
bdb24/Code/: TesterNotebook.ipynb
