[tool.poetry]
name = "bdb24"
version = "0.1.0"
description = ""
authors = ["SethTheDataScientist <seth.lanza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = "^5.12.0"
flake8 = "^6.1.0"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
